[package]
name = "ratquest"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
cli-clipboard = "0.4.0"
clipboard = "0.5.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-realm-textarea = { version = "2.0.0", features = ["search"] }
tui-realm-treeview = "2.0.0"
tui-textarea = "0.7.0"
tuirealm = "2.0.3"
